tests/compiler/jsxAttributeInFragment/index.tsx
< key="nope"></>
//~^ ERROR: Expected '('.
//~| ERROR: Expected '=>'.
//~| ERROR: Identifier expected.
//~| ERROR: Expression expected.
//~| ERROR: Unterminated regular expression literal.
